--- a/PAC1/src/pack1.html
+++ b/PAC1/src/pack1.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Pàgina en detall del pack número 1 de Bacus Terra">
-        <link rel="icon" href="/img/monogram-hq.png">
+        <link rel="icon" href="/img/monogram-hq.svg">
         <title>Explora i Gaudeix: Visita + Tast de Vins</title>
         <link rel="stylesheet" href="./style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,12 @@
     <header>
         <nav class="menu">
             <div class="logo-menu">
-                <a href="index.html"><img src="/img/bacus-terra-blanc.png" alt="logotip bacus terra"></a>
+                <a href="index.html">
+                    <picture>
+                        <source srcset="/dist/img/bacus-terra-blanc.webp" type="image/webp">
+                        <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
+                    </picture>
+                </a>
             </div>
             <a href="javascript:void(0)" class="menu-toggle">
                 <i class="fa-solid fa-bars"></i>
@@ -31,14 +36,17 @@
         </nav>
     </header>
     <main>
-        <div class="pack1-img">
+        <div id="section-hero" class="pack1-img">
             <h1>Explora i Gaudeix: Visita + Tast de Vins</h1>
         </div>
         <div class="pack-txt">
             <div>
                 <h3>De la Vinya al Vi: Descobreix el Vi des de l'Origen</h3>
                 <p>Vine a conèixer la nostra vinya i descobreix el procés d'elaboració del vi de primera mà. Amb el pack <i>Explora i Gaudeix</i>, coneixeràs el camí que recorre el nostre raïm, des del moment en què es planta fins que arriba a la taula.</p>
-                <img src="/img/pack1_vi_vinya.jpg?as=webp" alt="vinya">
+                <picture class="pack1-foto">
+                    <source srcset="/img/pack1_vi_vinya.jpg?as=webp" type="image/webp">
+                    <img src="/img/pack1_vi_vinya.jpg" alt="vinya" width="150" height="auto" loading="lazy" decoding="async" class="pack1-foto">
+                </picture>
             </div>
             <div>
                 <h3>T'ensenyem un vídeo de la ruta</h3>
@@ -51,7 +59,10 @@
                     <li><b>Visita al celler:</b><br>Endinsa't a les nostres instal·lacions i aprèn com transformem el raïm en vi.</li>
                     <li><b>Tast exclusiu:</b><br>Gaudeix d'una degustació especial dels nostres vins, descobrint-ne els sabors, aromes i característiques.</li>
                 </ul>
-                <img src="/img/pack1_copa_vi.jpg?as=webp" alt="copa de vi" class="pack1-foto">
+                <picture class="pack1-foto">
+                    <source srcset="/img/pack1_copa_vi.jpg?as=webp" type="image/webp">
+                    <img src="/img/pack1_copa_vi.jpg" alt="copa de vi" width="150" height="auto" loading="lazy" decoding="async" class="pack1-foto">
+                </picture>
             </div>
             <div>
                 <h3>Informació pràctica</h3>
@@ -64,7 +75,10 @@
             <div>
                 <h3>Reserva ara la teva experiència!</h3>
                 <p>No deixis escapar l'oportunitat de viure el vi com mai abans. Reserva ara i prepara't per una experiència inoblidable!</p>
-                <img src="/img/pack1_brindis.jpg?as=webp" alt="brindis" class="pack1-foto">
+                <picture class="pack1-foto">
+                    <source srcset="/img/pack1_brindis.jpg?as=webp" type="image/webp">
+                    <img src="/img/pack1_brindis.jpg" alt="brindis" width="150" height="auto" loading="lazy" decoding="async" class="pack1-foto">
+                </picture>
                 <div class="boto"><a href="/src/reserva.html">Fes la reserva ara</a></div>
             </div>
         </div>
@@ -74,7 +88,12 @@
     </main>
     <footer>
         <div class="logo-menu">
-            <a href="index.html"><img src="/img/bacus-terra-blanc.png?as=webp" alt="logotip bacus terra"></a>
+            <a href="index.html">
+                <picture>
+                    <source srcset="/dist/img/bacus-terra-blanc.webp" type="image/webp">
+                    <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
+                </picture>
+            </a>
             <p>2025-2026. Mar Domènech</p>
         </div>
         <div class="footer-content">
