--- a/PAC1/src/enllaços.html
+++ b/PAC1/src/enllaços.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Pàgina principal de Bacus Terra">
-        <link rel="icon" href="/img/monogram-hq.png">
+        <link rel="icon" href="/img/monogram-hq.svg">
         <title>Enllaços</title>
         <link rel="stylesheet" href="./style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,12 @@
     <header>
         <nav class="menu">
             <div class="logo-menu">
-                <a href="index.html"><img src="/img/bacus-terra-blanc.png?as=webp" alt="logotip bacus terra"></a>
+                <a href="index.html">
+                    <picture>
+                        <source srcset="/dist/img/bacus-terra-blanc.webp" type="image/webp">
+                        <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
+                    </picture>
+                </a>
             </div>
             <a href="javascript:void(0)" class="menu-toggle">
                 <i class="fa-solid fa-bars"></i>
@@ -31,7 +36,7 @@
         </nav>
     </header>
     <main>
-        <div class="quiSom-img">
+        <div id="section-hero" class="quiSom-img">
             <h1>Referències que han fet possible aquesta web</h1>
         </div>
         <div class="tablet-quiSom">
@@ -79,7 +84,12 @@
     </main>
     <footer>
         <div class="logo-menu">
-            <a href="index.html"><img src="/img/bacus-terra-blanc.png" alt="logotip bacus terra"></a>
+            <a href="index.html">
+                <picture>
+                    <source srcset="/dist/img/bacus-terra-blanc.webp" type="image/webp">
+                    <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
+                </picture>
+            </a>
             <p>2025-2026. Mar Domènech</p>
         </div>
         <div class="footer-content">
