--- a/PAC1/src/index.html
+++ b/PAC1/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Pàgina principal de Bacus Terra">
-        <link rel="icon" href="/img/monogram-hq.png">
+        <link rel="icon" href="/img/monogram-hq.svg">
         <title>Bacus Terra</title>
         <link rel="stylesheet" href="./style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,12 @@
     <header>
         <nav class="menu">
             <div class="logo-menu">
-                <a href="index.html"><img src="/img/bacus-terra-blanc.png" alt="logotip bacus terra"></a>
+                <a href="index.html">
+                    <picture>
+                        <source srcset="/dist/img/bacus-terra-blanc.webp" type="image/webp">
+                        <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
+                    </picture>
+                </a>
             </div>
             <a href="javascript:void(0)" class="menu-toggle">
                 <i class="fa-solid fa-bars"></i>
@@ -31,10 +36,17 @@
         </nav>
     </header>
     <main>
-        <div class="principal-img">
+        <div id="section-hero" class="principal-img">
             <h1>VINE A TASTAR LA EXPERIÈNCIA</h1>
             <p>visita les vinyes amb sabor propi</p>
         </div>
+        <div class="copa-vi-div">
+            <picture class="copa-vi">
+                <source srcset="/dist/img/copa_vi_portada.webp" type="image/webp">
+                <img src="/img/copa_vi_portada.jpg" alt="portada" width="250" height="auto" loading="lazy" decoding="async">
+            </picture>
+        </div>
+        
         <div class="contenidor">
             <div class="contenidor-tablet">
                 <a href="/src/reserva.html" class="first">
@@ -59,11 +71,21 @@
                 </a>
             </div>
         </div>
+        <div class="grapes_svg">
+            <img src="/img/grapes.svg" alt="raïm" width="50" height="auto" loading="lazy" decoding="async">
+            <img src="/img/grapes.svg" alt="raïm" width="50" height="auto" loading="lazy" decoding="async">
+            <img src="/img/grapes.svg" alt="raïm" width="50" height="auto" loading="lazy" decoding="async">
+        </div>
     </main>
     <footer>
         
         <div class="logo-menu">
-            <a href="index.html"><img src="/img/bacus-terra-blanc.png" alt="logotip bacus terra"></a>
+            <a href="index.html">
+                <picture>
+                    <source srcset="/dist/img/bacus-terra-blanc.webp" type="image/webp">
+                    <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
+                </picture>
+            </a>
             <p>2025-2026. Mar Domènech</p>
         </div>
         <div class="tablet-footer">
