--- a/PAC1/src/pack2.html
+++ b/PAC1/src/pack2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pàgina en detall del pack número 2 de Bacus Terra">
-    <link rel="icon" href="/img/monogram-hq.png">
+    <link rel="icon" href="/img/monogram-hq.svg">
     <title>Delícies Gourmet: Tast de Vins i Formatges</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,12 @@
     <header>
         <nav class="menu">
             <div class="logo-menu">
-                <a href="index.html"><img src="/img/bacus-terra-blanc.png" alt="logotip bacus terra"></a>
+                <a href="index.html">
+                    <picture>
+                        <source srcset="/dist/img/bacus-terra-blanc.webp" type="image/webp">
+                        <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
+                    </picture>
+                </a>
             </div>
             <a href="javascript:void(0)" class="menu-toggle">
                 <i class="fa-solid fa-bars"></i>
@@ -31,14 +36,18 @@
         </nav>
     </header>
     <main>
-        <div class="pack2-img">
+        <div id="section-hero" class="pack2-img">
             <h1>Delícies Gourmet: Tast de Vins i Formatges</h1>
         </div>
         <div class="pack-txt">
             <div>
                 <h3>Viu des del paladar</h3>
                 <p>Endinsa't en una experiència gastronòmica única amb el nostre pack <i>Delícies Gourmet</i>. Gaudeix d'un brunch selecte on els nostres millors vins s'acompanyen d'una selecció de formatges que despertaran els teus sentits amb sabors i aromes excepcionals. </p>
-                <img src="/img/pack2_picapica.jpg" alt="Taula amb menjars i vi">
+                <picture class="pack1-foto">
+                    <source srcset="/dist/img/pack2_picapica.webp" type="image/webp">
+                    <img src="/img/pack2_picapica.jpg" alt="Taula amb menjars i vi" width="150" height="auto" loading="lazy" decoding="async" class="pack1-foto">
+                </picture>
+                
             </div>
             <div>
                 <h3>T'ensenyem un vídeo per saber com catar un vi</h3>
@@ -51,7 +60,10 @@
                     <li><b>Selecció de formatges gourmet:</b><br> Acompanyem cada vi amb formatges artesans de proximitat, seleccionats per potenciar-ne els sabors i oferir una experiència de maridatge excepcional.</li>
                     <li><b>Acompanyaments especials:</b><br>Per completar l’experiència, el tast inclou pa artesà, fruits secs i confitures que harmonitzen a la perfecció amb els vins i formatges.</li>
                 </ul>
-                <img src="/img/pack2_copa_vi.jpg" alt="copa de vi i formatges" class="pack1-foto">
+                <picture class="pack1-foto">
+                    <source srcset="/dist/img/pack2_copa_vi.webp" type="image/webp">
+                    <img src="/img/pack2_copa_vi.jpg" alt="copa de vi i formatges" width="150" height="auto" loading="lazy" decoding="async" class="pack1-foto">
+                </picture>
             </div>
             <div>
                 <h3>Informació pràctica</h3>
@@ -64,7 +76,10 @@
             <div>
                 <h3>Reserva ara la teva experiència!</h3>
                 <p>Deixa't seduir per aquesta combinació de sabors i textures. Reserva la teva plaça i gaudeix d'un tast únic!</p>
-                <img src="/img/pack2_brindis.jpg" alt="brindis" class="pack1-foto">
+                <picture class="pack1-foto">
+                    <source srcset="/dist/img/pack2_brindis.webp" type="image/webp">
+                    <img src="/img/pack2_brindis.jpg" alt="brindis" width="150" height="auto" loading="lazy" decoding="async" class="pack1-foto">
+                </picture>
                 <div class="boto"><a href="/src/reserva.html">Fes la reserva ara</a></div>
             </div>
         </div>
@@ -74,7 +89,12 @@
     </main>
     <footer>
         <div class="logo-menu">
-            <a href="index.html"><img src="/img/bacus-terra-blanc.png" alt="logotip bacus terra"></a>
+            <a href="index.html">
+                <picture>
+                    <source srcset="/dist/img/bacus-terra-blanc.webp" type="image/webp">
+                    <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
+                </picture>
+            </a>
             <p>2025-2026. Mar Domènech</p>
         </div>
         <div class="footer-content">
