--- a/PAC1/src/sobre_nosaltres.html
+++ b/PAC1/src/sobre_nosaltres.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Pàgina sobre nosaltres de Bacus Terra">
-        <link rel="icon" href="/img/monogram-hq.png">
+        <link rel="icon" href="/img/monogram-hq.svg">
         <title>Qui som</title>
         <link rel="stylesheet" href="./style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,12 @@
     <header>
         <nav class="menu">
             <div class="logo-menu">
-                <a href="index.html"><img src="/img/bacus-terra-blanc.png" alt="logotip bacus terra"></a>
+                <a href="index.html">
+                    <picture>
+                        <source srcset="/dist/img/bacus-terra-blanc.webp" type="image/webp">
+                        <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
+                    </picture>
+                </a>
             </div>
             <a href="javascript:void(0)" class="menu-toggle">
                 <i class="fa-solid fa-bars"></i>
@@ -31,23 +36,34 @@
         </nav>
     </header>
     <main>
-        <div class="quiSom-img">
+        <div id="section-hero" class="quiSom-img">
             <h1>Qui som</h1>
         </div>
         <div class="tablet-quiSom">
             <div class="quiSomTxt">
-                <img src="/img/vinya_quiSom.jpg" alt="">
+                <picture>
+                    <source srcset="/dist/img/vinya_quiSom.webp" type="image/webp">
+                    <img src="/img/vinya_quiSom.jpg" alt="vinya" loading="lazy" decoding="async">
+                </picture>
                 <p>Som una petita família que viu i gaudeix del color del vi i de la terra. Ens definim com a apassionats de la vinya i el vi des de tota la vida. Estem tan orgullosos de la nostra vinya i el producte que oferim, que desitgem compartir-ho amb tots aquells que vulguin viure una experiència inoblidable de sabors, tradició i natura.</p>
                 <p>La nostra vinya és un espai ple de vida, on la cura del sòl i el respecte pel medi ambient són la base de tot el que fem. Cada cep és tractat amb dedicació i amor per assegurar-nos que el vi que obtenim sigui de la més alta qualitat, un reflex del nostre compromís amb l'excel·lència i la sostenibilitat.</p>
                 <p>Volem oferir l'oportunitat de veure de prop les vinyes, aprendre sobre el procés d'elaboració del vi i, sobretot, viure el vi de manera directa, com mai abans. Des de la verema fins a la copa, cada pas en el nostre procés de producció és una experiència sensorial única que convidem a descobrir. Els nostres vins no només són el resultat de la terra, sinó també de la passió de la nostra família. Cada ampolla que surt de la nostra bodega carrega una història, una tradició i un amor pel que fem. T'animem a venir, caminar entre les nostres vinyes, respirar l'aire fresc de la terra i tastar els nostres vins, que són tan únics com la nostra història.</p>
                 <p>T'esperem per viure una experiència única entre vinyes!</p>
-                <img src="/img/raim_quiSom.jpg" alt="">
+                <picture>
+                    <source srcset="/dist/img/raim_quiSom.webp" type="image/webp">
+                    <img src="/img/raim_quiSom.jpg" alt="Fotografia raïm a les mans" loading="lazy" decoding="async">
+                </picture>
             </div>
         </div>
     </main>
     <footer>
         <div class="logo-menu">
-            <a href="index.html"><img src="/img/bacus-terra-blanc.png" alt="logotip bacus terra"></a>
+            <a href="index.html">
+                <picture>
+                    <source srcset="/dist/img/bacus-terra-blanc.webp" type="image/webp">
+                    <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
+                </picture>
+            </a>
             <p>2025-2026. Mar Domènech</p>
         </div>
         <div class="footer-content">
