--- a/PAC1/src/index.html
+++ b/PAC1/src/index.html
@@ -18,9 +18,9 @@
             <div class="logo-menu">
                 <a href="index.html">
                     <picture>
-                        <source srcset="/dist/img/bacus-terra-blanc.webp" type="image/webp">
-                        <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
-                    </picture>
+                        <source srcset="/img/img_op/bacus-terra-blanc.webp" type="image/webp">
+                        <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="250" height="auto" loading="lazy" decoding="async">
+                    </picture>                    
                 </a>
             </div>
             <a href="javascript:void(0)" class="menu-toggle">
@@ -42,8 +42,8 @@
         </div>
         <div class="copa-vi-div">
             <picture class="copa-vi">
-                <source srcset="/dist/img/copa_vi_portada.webp" type="image/webp">
-                <img src="/img/copa_vi_portada.jpg" alt="portada" width="250" height="auto" loading="lazy" decoding="async">
+                <source srcset="/img/img_op/pinacograma.webp" type="image/webp">
+                <img src="/img/pinacograma.png" alt="pinacograma" width="250" height="auto" loading="lazy" decoding="async">
             </picture>
         </div>
         
@@ -82,8 +82,8 @@
         <div class="logo-menu">
             <a href="index.html">
                 <picture>
-                    <source srcset="/dist/img/bacus-terra-blanc.webp" type="image/webp">
-                    <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
+                    <source srcset="/img/img_op/bacus-terra-blanc.webp" type="image/webp">
+                    <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="250" height="auto" loading="lazy" decoding="async">
                 </picture>
             </a>
             <p>2025-2026. Mar Domènech</p>
