--- a/PAC1/src/experiencies.html
+++ b/PAC1/src/experiencies.html
@@ -43,8 +43,8 @@
             <div class="pack">
                 <div class="">
                     <picture>
-                        <source srcset="/img/pack1_vi_celler.jpg?as=webp" type="image/webp">
-                        <img src="/img/pack1_vi_celler.jpg" alt="copa de vi a les vinyes" width="150" height="auto" loading="lazy" decoding="async">
+                        <source srcset="/img/img_op/pack1_vi_celler.webp 1x, /img/img_op/pack1_vi_celler@2x.webp 2x" type="image/webp">
+                        <img src="/img/pack1_vi_celler.jpg" alt="copa de vi a les vinyes" loading="lazy" decoding="async">
                     </picture>
                     
                     <p class="pack-name">Explora i Gaudeix: Visita + Tast de Vins</p>
@@ -58,8 +58,8 @@
             <div class="pack">
                 <div class="">
                     <picture>
-                        <source srcset="/img/pack2_cata_vi.jpg?as=webp" type="image/webp">
-                        <img src="/img/pack2_cata_vi.jpg" alt="taula amb vins i formatges" width="150" height="auto" loading="lazy" decoding="async">
+                        <source srcset="/img/img_op/pack2_cata_vi.webp 1x, /img/img_op/pack2_cata_vi@2x.webp 2x" type="image/webp">
+                        <img src="/img/pack2_cata_vi.jpg" alt="taula amb vins i formatges" loading="lazy" decoding="async">
                     </picture>
                     <p class="pack-name">Delícies Gourmet: Tast de Vins i Formatges</p>
                 </div>
@@ -71,8 +71,8 @@
             <div class="pack">
                 <div class="">
                     <picture>
-                        <source srcset="/img/pack3_gourmet.jpg?as=webp" type="image/webp">
-                        <img src="/img/pack3_gourmet.jpg" alt="cata de vins del pack 3" width="150" height="auto" loading="lazy" decoding="async">
+                        <source srcset="/img/img_op/pack3_gourmet.webp 1x, /img/img_op/pack3_gourmet@2x.webp 2x" type="image/webp">
+                        <img src="/img/pack3_gourmet.jpg" alt="cata de vins del pack 3" loading="lazy" decoding="async">
                     </picture>
                     <p class="pack-name">L'Experiència Completa: Visita + Cata Premium</p>
                 </div>
