--- a/PAC1/src/pack2.html
+++ b/PAC1/src/pack2.html
@@ -44,8 +44,10 @@
                 <h3>Viu des del paladar</h3>
                 <p>Endinsa't en una experiència gastronòmica única amb el nostre pack <i>Delícies Gourmet</i>. Gaudeix d'un brunch selecte on els nostres millors vins s'acompanyen d'una selecció de formatges que despertaran els teus sentits amb sabors i aromes excepcionals. </p>
                 <picture class="pack1-foto">
-                    <source srcset="/img/img_op/pack2_picapica.webp" type="image/webp">
-                    <img src="/img/pack2_picapica.jpg" alt="Taula amb menjars i vi" width="150" height="auto" loading="lazy" decoding="async" class="pack1-foto">
+                    <source media="(min-width: 992px)" srcset="/img/img_op/pack2_picapica-pc.webp" type="image/webp">
+                    <source media="(min-width: 768px)" srcset="/img/img_op/pack2_picapica.webp" type="image/webp">
+                    <source srcset="/img/img_op/pack2_picapica-movil.webp" type="image/webp">
+                    <img src="/img/pack2_picapica.jpg" alt="Taula amb menjars i vi" loading="lazy" decoding="async" class="pack1-foto">
                 </picture>
                 
             </div>
@@ -61,8 +63,10 @@
                     <li><b>Acompanyaments especials:</b><br>Per completar l’experiència, el tast inclou pa artesà, fruits secs i confitures que harmonitzen a la perfecció amb els vins i formatges.</li>
                 </ul>
                 <picture class="pack1-foto">
-                    <source srcset="/img/img_op/pack2_copa_vi.webp" type="image/webp">
-                    <img src="/img/pack2_copa_vi.jpg" alt="copa de vi i formatges" width="150" height="auto" loading="lazy" decoding="async" class="pack1-foto">
+                    <source media="(min-width: 992px)" srcset="/img/img_op/pack2_copa_vi.webp" type="image/webp">
+                    <source media="(min-width: 768px)" srcset="/img/img_op/pack2_copa_vi-tablet.webp" type="image/webp">
+                    <source srcset="/img/img_op/pack2_copa_vi-movil.webp" type="image/webp">
+                    <img src="/img/pack2_copa_vi.jpg" alt="copa de vi i formatges" loading="lazy" decoding="async" class="pack1-foto">
                 </picture>
             </div>
             <div>
@@ -77,8 +81,10 @@
                 <h3>Reserva ara la teva experiència!</h3>
                 <p>Deixa't seduir per aquesta combinació de sabors i textures. Reserva la teva plaça i gaudeix d'un tast únic!</p>
                 <picture class="pack1-foto">
-                    <source srcset="/img/img_op/pack2_brindis.webp" type="image/webp">
-                    <img src="/img/pack2_brindis.jpg" alt="brindis" width="150" height="auto" loading="lazy" decoding="async" class="pack1-foto">
+                    <source media="(min-width: 992px)" srcset="/img/img_op/pack2_brindis-pc.webp" type="image/webp">
+                    <source media="(min-width: 768px)" srcset="/img/img_op/pack2_brindis.webp" type="image/webp">
+                    <source srcset="/img/img_op/pack2_brindis-movil.webp" type="image/webp">
+                    <img src="/img/pack2_brindis.jpg" alt="brindis" loading="lazy" decoding="async" class="pack1-foto">
                 </picture>
                 <div class="boto"><a href="/src/reserva.html">Fes la reserva ara</a></div>
             </div>
