--- a/PAC1/src/sobre_nosaltres.html
+++ b/PAC1/src/sobre_nosaltres.html
@@ -42,7 +42,9 @@
         <div class="tablet-quiSom">
             <div class="quiSomTxt">
                 <picture>
-                    <source srcset="/img/img_op/vinya_quiSom.webp" type="image/webp">
+                    <source media="(min-width: 992px)" srcset="/img/img_op/vinya_quiSom-pc.webp" type="image/webp">
+                    <source media="(min-width: 768px)" srcset="/img/img_op/vinya_quiSom.webp" type="image/webp">
+                    <source srcset="/img/img_op/vinya_quiSom-movil.webp" type="image/webp">
                     <img src="/img/vinya_quiSom.jpg" alt="vinya" loading="lazy" decoding="async">
                 </picture>
                 <p>Som una petita família que viu i gaudeix del color del vi i de la terra. Ens definim com a apassionats de la vinya i el vi des de tota la vida. Estem tan orgullosos de la nostra vinya i el producte que oferim, que desitgem compartir-ho amb tots aquells que vulguin viure una experiència inoblidable de sabors, tradició i natura.</p>
@@ -50,7 +52,9 @@
                 <p>Volem oferir l'oportunitat de veure de prop les vinyes, aprendre sobre el procés d'elaboració del vi i, sobretot, viure el vi de manera directa, com mai abans. Des de la verema fins a la copa, cada pas en el nostre procés de producció és una experiència sensorial única que convidem a descobrir. Els nostres vins no només són el resultat de la terra, sinó també de la passió de la nostra família. Cada ampolla que surt de la nostra bodega carrega una història, una tradició i un amor pel que fem. T'animem a venir, caminar entre les nostres vinyes, respirar l'aire fresc de la terra i tastar els nostres vins, que són tan únics com la nostra història.</p>
                 <p>T'esperem per viure una experiència única entre vinyes!</p>
                 <picture>
-                    <source srcset="/img/img_op/raim_quiSom.webp" type="image/webp">
+                    <source media="(min-width: 992px)" srcset="/img/img_op/raim_quiSom-pc.webp" type="image/webp">
+                    <source media="(min-width: 768px)" srcset="/img/img_op/raim_quiSom-tablet.webp" type="image/webp">
+                    <source srcset="/img/img_op/raim_quiSom-movil.webp" type="image/webp">
                     <img src="/img/raim_quiSom.jpg" alt="Fotografia raïm a les mans" loading="lazy" decoding="async">
                 </picture>
             </div>
