--- a/PAC1/src/index.html
+++ b/PAC1/src/index.html
@@ -19,7 +19,7 @@
                 <a href="index.html">
                     <picture>
                         <source srcset="/img/img_op/bacus-terra-blanc.webp" type="image/webp">
-                        <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="250" height="auto" loading="lazy" decoding="async">
+                        <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
                     </picture>                    
                 </a>
             </div>
@@ -42,8 +42,8 @@
         </div>
         <div class="copa-vi-div">
             <picture class="copa-vi">
-                <source srcset="/img/img_op/pinacograma.webp" type="image/webp">
-                <img src="/img/pinacograma.png" alt="pinacograma" width="250" height="auto" loading="lazy" decoding="async">
+                <source srcset="/img/img_op/copa_vi_portada.webp" type="image/webp">
+                <img src="/img/copa_vi_portada.png" alt="pinacograma" width="250" height="auto" loading="lazy" decoding="async">
             </picture>
         </div>
         
@@ -83,7 +83,7 @@
             <a href="index.html">
                 <picture>
                     <source srcset="/img/img_op/bacus-terra-blanc.webp" type="image/webp">
-                    <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="250" height="auto" loading="lazy" decoding="async">
+                    <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
                 </picture>
             </a>
             <p>2025-2026. Mar Domènech</p>
