--- a/PAC1/src/pack1.html
+++ b/PAC1/src/pack1.html
@@ -44,8 +44,10 @@
                 <h3>De la Vinya al Vi: Descobreix el Vi des de l'Origen</h3>
                 <p>Vine a conèixer la nostra vinya i descobreix el procés d'elaboració del vi de primera mà. Amb el pack <i>Explora i Gaudeix</i>, coneixeràs el camí que recorre el nostre raïm, des del moment en què es planta fins que arriba a la taula.</p>
                 <picture class="pack1-foto">
-                    <source srcset="/img/img_op/pack1_vi_vinya.webp" type="image/webp">
-                    <img src="/img/pack1_vi_vinya.jpg" alt="vinya" width="150" height="auto" loading="lazy" decoding="async" class="pack1-foto">
+                    <source media="(min-width: 992px)" srcset="/img/img_op/pack1_vi_vinya-pc.webp" type="image/webp">
+                    <source media="(min-width: 768px)" srcset="/img/img_op/pack1_vi_vinya-tablet.webp" type="image/webp">
+                    <source srcset="/img/img_op/pack1_vi_vinya-movil.webp" type="image/webp">
+                    <img src="/img/pack1_vi_vinya.jpg" alt="vinya" loading="lazy" decoding="async" class="pack1-foto">
                 </picture>
             </div>
             <div>
@@ -60,8 +62,10 @@
                     <li><b>Tast exclusiu:</b><br>Gaudeix d'una degustació especial dels nostres vins, descobrint-ne els sabors, aromes i característiques.</li>
                 </ul>
                 <picture class="pack1-foto">
-                    <source srcset="/img/img_op/pack1_copa_vi.webp" type="image/webp">
-                    <img src="/img/pack1_copa_vi.jpg" alt="copa de vi" width="150" height="auto" loading="lazy" decoding="async" class="pack1-foto">
+                    <source media="(min-width: 992px)" srcset="/img/img_op/pack1_copa_vi.webp" type="image/webp">
+                    <source media="(min-width: 768px)" srcset="/img/img_op/pack1_copa_vi-tablet.webp" type="image/webp">
+                    <source srcset="/img/img_op/pack1_copa_vi-movil.webp" type="image/webp">
+                    <img src="/img/pack1_copa_vi.jpg" alt="copa de vi" loading="lazy" decoding="async" class="pack1-foto">
                 </picture>
             </div>
             <div>
@@ -76,8 +80,10 @@
                 <h3>Reserva ara la teva experiència!</h3>
                 <p>No deixis escapar l'oportunitat de viure el vi com mai abans. Reserva ara i prepara't per una experiència inoblidable!</p>
                 <picture class="pack1-foto">
-                    <source srcset="/img/img_op/pack1_brindis.webp" type="image/webp">
-                    <img src="/img/pack1_brindis.jpg" alt="brindis" width="150" height="auto" loading="lazy" decoding="async" class="pack1-foto">
+                    <source media="(min-width: 992px)" srcset="/img/img_op/pack1_brindis-pc.webp" type="image/webp">
+                    <source media="(min-width: 768px)" srcset="/img/img_op/pack1_brindis-tablet.webp" type="image/webp">
+                    <source srcset="/img/img_op/pack1_brindis-movil.webp" type="image/webp">
+                    <img src="/img/pack1_brindis.jpg" alt="brindis" loading="lazy" decoding="async" class="pack1-foto">
                 </picture>
                 <div class="boto"><a href="/src/reserva.html">Fes la reserva ara</a></div>
             </div>
