copa vi portar arreglat 29/04

--- a/PAC1/src/index.html
+++ b/PAC1/src/index.html
@@ -43,7 +43,7 @@
         <div class="copa-vi-div">
             <picture class="copa-vi">
                 <source srcset="/img/img_op/copa_vi_portada.webp" type="image/webp">
-                <img src="/img/copa_vi_portada.png" alt="pinacograma" width="250" height="auto" loading="lazy" decoding="async">
+                <img src="/img/copa_vi_portada.jpg" alt="pinacograma" width="250" height="auto" loading="lazy" decoding="async">
             </picture>
         </div>
         
