--- a/PAC1/src/enllaços.html
+++ b/PAC1/src/enllaços.html
@@ -104,6 +104,6 @@
             </div>
         </div>
     </footer>
-    <script src="./scripts.js"></script>
+    <script defer src="./scripts.js"></script>
 </body>
 </html>
