--- a/PAC1/src/index.html
+++ b/PAC1/src/index.html
@@ -101,6 +101,6 @@
         </div>
     </div>
     </footer>
-    <script src="./scripts.js"></script>
+    <script defer src="./scripts.js"></script>
 </body>
 </html>
