--- a/PAC1/src/pack1.html
+++ b/PAC1/src/pack1.html
@@ -114,6 +114,6 @@
             </div>
         </div>
     </footer>
-    <script src="./scripts.js"></script>
+    <script defer src="./scripts.js"></script>
 </body>
 </html>
