--- a/PAC1/src/pack2.html
+++ b/PAC1/src/pack2.html
@@ -115,6 +115,6 @@
             </div>
         </div>
     </footer>
-    <script src="./scripts.js"></script>
+    <script defer src="./scripts.js"></script>
 </body>
 </html>
