--- a/PAC1/src/reserva.html
+++ b/PAC1/src/reserva.html
@@ -91,6 +91,6 @@
             </div>
         </div>
     </footer>
-    <script src="./scripts.js"></script>
+    <script defer src="./scripts.js"></script>
 </body>
 </html>
