--- a/PAC1/src/sobre_nosaltres.html
+++ b/PAC1/src/sobre_nosaltres.html
@@ -82,6 +82,6 @@
             </div>
         </div>
     </footer>
-    <script src="./scripts.js"></script>
+    <script defer src="./scripts.js"></script>
 </body>
 </html>
