--- a/PAC1/src/index.html
+++ b/PAC1/src/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="ca">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Pàgina principal de Bacus Terra">
-        <link rel="icon" href="/img/monogram-hq.svg">
-        <title>Bacus Terra</title>
-        <link rel="stylesheet" href="./style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/e92ad526ad.js" crossorigin="anonymous"></script> <!-- script per les icones -->
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pàgina principal de Bacus Terra">
+    <link rel="icon" href="/img/monogram-hq.svg">
+    <title>Bacus Terra</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+    <script defer src="https://kit.fontawesome.com/e92ad526ad.js" crossorigin="anonymous"></script>
+</head>
 <body>
     <header>
         <nav class="menu">
@@ -41,29 +41,37 @@
             <p>visita les vinyes amb sabor propi</p>
         </div>
         <div class="contenidor">
-            <div class="contenidor-tablet">
-                <a href="/src/reserva.html" class="first">
-                    <div>
-                        <p class="titol">Reserva la teva visita</p>
-                        <p>Anima't i vine a visitar-nos!</p>
-                    </div>
-                </a>
-                
-                <a href="/src/experiencies.html" class="second">
-                    <div>
-                        <p class="titol">Descobreix les nostres experiències</p>
-                        <p>Informa't dels nostres serveis</p>
-                    </div>
-                </a>
-                
-                <a href="/src/sobre_nosaltres.html" class="third">
-                    <div>
-                        <p class="titol">La nostra història</p>
-                        <p>Conèix més sobre la vinya i els nostres vins</p>
-                    </div>
-                </a>
+    <div class="contenidor-tablet">
+        <a href="/src/reserva.html" class="card">
+            <div class="img-container">
+                <img src="/img/img_op/cata-vins-500.webp" alt="Cata de vins" loading="lazy" decoding="async">
             </div>
-        </div>
+            <div class="text">
+                <p class="titol">Reserva la teva visita</p>
+                <p>Anima't i vine a visitar-nos!</p>
+            </div>
+        </a>
+
+        <a href="/src/experiencies.html" class="card">
+            <div class="img-container">
+                <img src="/img/img_op/vinya_raim-500.webp" alt="Vinya i raïm" loading="lazy" decoding="async">
+            </div>
+            <div class="text">
+                <p class="titol">Descobreix les nostres experiències</p>
+                <p>Informa't dels nostres serveis</p>
+            </div>
+        </a>
+
+        <a href="/src/sobre_nosaltres.html" class="card">
+            <div class="img-container">
+                <img src="/img/img_op/vinya-500.webp" alt="La nostra vinya" loading="lazy" decoding="async">
+            </div>
+            <div class="text">
+                <p class="titol">La nostra història</p>
+                <p>Conèix més sobre la vinya i els nostres vins</p>
+            </div>
+        </a>
+    </div>
         <div class="grapes_svg">
             <img src="/img/grapes.svg" alt="raïm" width="50" height="auto" loading="lazy" decoding="async">
             <img src="/img/grapes.svg" alt="raïm" width="50" height="auto" loading="lazy" decoding="async">
