canvis scripts index 28/05

--- a/PAC1/src/index.html
+++ b/PAC1/src/index.html
@@ -6,10 +6,10 @@
         <meta name="description" content="Pàgina principal de Bacus Terra">
         <link rel="icon" href="/img/monogram-hq.svg">
         <title>Bacus Terra</title>
-        <link rel="stylesheet" href="./style.css" media="print" onload="this.media='all'">
+        <link rel="stylesheet" href="./style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" media="print">
         <script defer src="https://kit.fontawesome.com/e92ad526ad.js" crossorigin="anonymous"></script> <!-- script per les icones -->
     </head>
 <body>
