--- a/PAC1/src/pack1.html
+++ b/PAC1/src/pack1.html
@@ -52,7 +52,9 @@
             </div>
             <div>
                 <h3>T'ensenyem un vídeo de la ruta</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/n5C5s6gJjcU?si=lrWJj31TOXFBL0pC" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div id="iframeboxing" onclick="load_on_iframe()" style="background: url('https://img.youtube.com/vi/n5C5s6gJjcU/hqdefault.jpg');">
+                    <iframe id="iframeonclick" class="hidden" style="border: 0;" src="" width="560" height="315" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
+                </div>
             </div>
             <div>
                 <h3>Què inclou aquest pack?</h3>
