--- a/PAC1/src/pack2.html
+++ b/PAC1/src/pack2.html
@@ -53,7 +53,9 @@
             </div>
             <div>
                 <h3>T'ensenyem un vídeo per saber com catar un vi</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/LcdM_shS3jo?si=i9GQRzwFwZKjBmjr" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div id="iframeboxing2" onclick="load_on_iframe2()" style="background: url('https://img.youtube.com/vi/LcdM_shS3jo/hqdefault.jpg'); background-size: cover; cursor: pointer; position: relative; padding-top: 56.25%; width: 100%; max-width: 560px; margin: 2em auto; border-radius: 0.5em; overflow: hidden;">
+                    <iframe id="iframeonclick2" class="hidden" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;" src="" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
+        </div>
             </div>
             <div>
                 <h3>Què inclou aquest pack?</h3>
