--- a/PAC1/src/pack1.html
+++ b/PAC1/src/pack1.html
@@ -53,7 +53,7 @@
             <div>
                 <h3>T'ensenyem un vídeo de la ruta</h3>
                 <div id="iframeboxing" onclick="load_on_iframe()" style="background: url('https://img.youtube.com/vi/n5C5s6gJjcU/hqdefault.jpg');">
-                    <iframe id="iframeonclick" class="hidden" style="border: 0;" src="#" width="560" height="315" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
+                    <iframe id="iframeonclick" class="hidden" style="border: 0;" width="560" height="315" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
                 </div>
             </div>
             <div>
