--- a/PAC1/src/pack1.html
+++ b/PAC1/src/pack1.html
@@ -116,6 +116,6 @@
             </div>
         </div>
     </footer>
-    <script defer src="./scripts.js"></script>
+    <script src="scripts.js" defer></script>
 </body>
 </html>
