--- a/PAC1/src/pack2.html
+++ b/PAC1/src/pack2.html
@@ -117,6 +117,6 @@
             </div>
         </div>
     </footer>
-    <script defer src="./scripts.js"></script>
+    <script src="scripts.js" defer></script>
 </body>
 </html>
