--- a/PAC1/src/pack2.html
+++ b/PAC1/src/pack2.html
@@ -117,6 +117,13 @@
             </div>
         </div>
     </footer>
-    <script src="scripts.js" defer></script>
+    <script src="scripts.js"></script>
+    <script>
+        function load_on_iframe2() {
+            const iframe = document.getElementById("iframeonclick2");
+            iframe.classList.remove("hidden");
+            iframe.src = "https://www.youtube.com/embed/LcdM_shS3jo?si=i9GQRzwFwZKjBmjr&autoplay=1";
+        }
+    </script>
 </body>
 </html>
