--- a/PAC1/src/pack1.html
+++ b/PAC1/src/pack1.html
@@ -116,13 +116,6 @@
             </div>
         </div>
     </footer>
-    <script src="scripts.js"></script>
-    <script>
-    function load_on_iframe() {
-        const iframe = document.getElementById("iframeonclick");
-        iframe.classList.remove("hidden");
-        iframe.src = "https://www.youtube.com/embed/n5C5s6gJjcU?autoplay=1";
-    }
-</script>
+    <script type="module" src="./scripts.js"></script>
 </body>
 </html>
