modificació grapes height 29/05

--- a/PAC1/src/index.html
+++ b/PAC1/src/index.html
@@ -65,9 +65,9 @@
             </div>
         </div>
         <div class="grapes_svg">
-            <img src="/img/grapes.svg" alt="raïm" width="50" height="auto" loading="lazy" decoding="async">
-            <img src="/img/grapes.svg" alt="raïm" width="50" height="auto" loading="lazy" decoding="async">
-            <img src="/img/grapes.svg" alt="raïm" width="50" height="auto" loading="lazy" decoding="async">
+            <img src="/img/grapes.svg" alt="raïm" width="50" height="50" loading="lazy" decoding="async">
+            <img src="/img/grapes.svg" alt="raïm" width="50" height="50" loading="lazy" decoding="async">
+            <img src="/img/grapes.svg" alt="raïm" width="50" height="50" loading="lazy" decoding="async">
         </div>
         <div class="copa-vi-div">
             <picture class="copa-vi">
