modificació grapes height 29/05

--- a/PAC1/src/index.html
+++ b/PAC1/src/index.html
@@ -82,7 +82,7 @@
             <a href="index.html">
                 <picture>
                     <source srcset="/img/img_op/bacus-terra-blanc.webp" type="image/webp">
-                    <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
+                    <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="375" loading="lazy" decoding="async">
                 </picture>
             </a>
             <p>2025-2026. Mar Domènech</p>
