--- a/PAC1/src/index.html
+++ b/PAC1/src/index.html
@@ -72,7 +72,7 @@
         <div class="copa-vi-div">
             <picture class="copa-vi">
                 <source srcset="/img/img_op/copa_vi_portada-500.webp" type="image/webp">
-                <img src="/img/copa_vi_portada.jpg" alt="pinacograma" width="250" height="auto" loading="lazy" decoding="async">
+                <img src="/img/copa_vi_portada.jpg" alt="pinacograma" width="250" height="375" loading="lazy" decoding="async">
             </picture>
         </div>
     </main>
@@ -82,7 +82,7 @@
             <a href="index.html">
                 <picture>
                     <source srcset="/img/img_op/bacus-terra-blanc.webp" type="image/webp">
-                    <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="375" loading="lazy" decoding="async">
+                    <img src="/img/bacus-terra-blanc.png" alt="Logotip Bacus Terra" width="150" height="auto" loading="lazy" decoding="async">
                 </picture>
             </a>
             <p>2025-2026. Mar Domènech</p>
