modificació hero images 29/05

--- a/PAC1/src/index.html
+++ b/PAC1/src/index.html
@@ -37,8 +37,9 @@
     </header>
     <main>
         <div id="section-hero" class="principal-img">
+            <img src="/img/img_op/copa-vi-fons-home-480.webp" alt="Copa de vi de fons" class="hero-img" fetchpriority="high" decoding="async" loading="eager">
             <h1>VINE A TASTAR LA EXPERIÈNCIA</h1>
-            <p>visita les vinyes amb sabor propi</p>
+        <p>visita les vinyes amb sabor propi</p>
         </div>
         <div class="contenidor">
             <div class="contenidor-tablet">
