--- a/PAC1/src/pack1.html
+++ b/PAC1/src/pack1.html
@@ -37,6 +37,7 @@
     </header>
     <main>
         <div id="section-hero" class="pack1-img">
+            <img src="/img/img_op/celler-pack1-480.webp" alt="Copa de vi de fons" class="hero-img" fetchpriority="high" decoding="async" loading="eager">
             <h1>Explora i Gaudeix: Visita + Tast de Vins</h1>
         </div>
         <div class="pack-txt">
