--- a/PAC1/src/pack2.html
+++ b/PAC1/src/pack2.html
@@ -37,6 +37,7 @@
     </header>
     <main>
         <div id="section-hero" class="pack2-img">
+            <img src="/img/img_op/copa_vi_fons_pack2-480.webp" alt="Copa de vi de fons" class="hero-img" fetchpriority="high" decoding="async" loading="eager">
             <h1>Delícies Gourmet: Tast de Vins i Formatges</h1>
         </div>
         <div class="pack-txt">
