--- a/PAC1/src/reserva.html
+++ b/PAC1/src/reserva.html
@@ -37,6 +37,7 @@
     </header>
     <main>
         <div id="section-hero" class="reserva-img">
+            <img src="/img/img_op/vinya_fons_reserva-480.webp" alt="Copa de vi de fons" class="hero-img" fetchpriority="high" decoding="async" loading="eager">
             <h1>Reserva</h1>
         </div>
         <div class="contenidor-text-form">
