--- a/PAC1/src/sobre_nosaltres.html
+++ b/PAC1/src/sobre_nosaltres.html
@@ -37,6 +37,7 @@
     </header>
     <main>
         <div id="section-hero" class="quiSom-img">
+            <img src="/img/img_op/vinya_fons_quiSom-480.webp" alt="Copa de vi de fons" class="hero-img" fetchpriority="high" decoding="async" loading="eager">
             <h1>Qui som</h1>
         </div>
         <div class="tablet-quiSom">
