--- a/PAC1/src/experiencies.html
+++ b/PAC1/src/experiencies.html
@@ -37,6 +37,7 @@
     </header>
     <main>
         <div id="section-hero" class="experiencies-img">
+            <img src="/img/img_op/vinya_fons_experiencies-480.webp" alt="Copa de vi de fons" class="hero-img" fetchpriority="high" decoding="async" loading="eager">
             <h1>Descobreix les nostres experiències</h1>
         </div>
         <div class="contenidor contenidor-exp">
