--- a/PAC1/src/pack2.html
+++ b/PAC1/src/pack2.html
@@ -37,7 +37,12 @@
     </header>
     <main>
         <div id="section-hero" class="pack2-img">
-            <img src="/img/img_op/copa_vi_fons_pack2-480.webp" alt="Copa de vi de fons" class="hero-img" fetchpriority="high" decoding="async" loading="eager">
+            <picture class="hero-img">
+                    <source media="(min-width: 992px)" srcset="/img/img_op/copa-vi-fons-home-1600.webp" type="image/webp">
+                    <source media="(min-width: 768px)" srcset="/img/img_op/copa-vi-fons-home-960.webp">
+                    <source srcset="/img/img_op/copa_vi_fons_pack2-480.webp" type="image/webp">
+                    <img src="/img/img_op/copa_vi_fons_pack2-480.webp" alt="Copa de vi de fons" class="hero-img" fetchpriority="high" decoding="async" loading="eager">
+                </picture>
             <h1>Delícies Gourmet: Tast de Vins i Formatges</h1>
         </div>
         <div class="pack-txt">
