--- a/PAC1/src/enllaços.html
+++ b/PAC1/src/enllaços.html
@@ -37,7 +37,12 @@
     </header>
     <main>
         <div id="section-hero" class="quiSom-img">
-            <img src="/img/img_op/vinya_fons_quiSom-480.webp" alt="Copa de vi de fons" class="hero-img" fetchpriority="high" decoding="async" loading="eager">
+            <picture class="hero-img">
+                <source media="(min-width: 992px)" srcset="/img/img_op/vinya_fons_quiSom-1600.webp" type="image/webp">
+                <source media="(min-width: 768px)" srcset="/img/img_op/vinya_fons_quiSom-960.webp" type="image/webp">
+                <source srcset="/img/img_op/vinya_fons_quiSom-480.webp" type="image/webp">
+                <img src="/img/img_op/vinya_fons_quiSom-480.webp" alt="Fons qui som" class="hero-img" width="1600" height="600" fetchpriority="high" decoding="async" loading="eager">
+            </picture>
             <h1>Referències que han fet possible aquesta web</h1>
         </div>
         <div class="tablet-quiSom">
