--- a/PAC1/src/experiencies.html
+++ b/PAC1/src/experiencies.html
@@ -37,7 +37,13 @@
     </header>
     <main>
         <div id="section-hero" class="experiencies-img">
-            <img src="/img/img_op/vinya_fons_experiencies-480.webp" alt="Copa de vi de fons" class="hero-img" fetchpriority="high" decoding="async" loading="eager">
+            <picture class="hero-img">
+                <source media="(min-width: 992px)" srcset="/img/img_op/vinya_fons_experiencies-1600.webp" type="image/webp">
+                <source media="(min-width: 768px)" srcset="/img/img_op/vinya_fons_experiencies-960.webp" type="image/webp">
+                <source srcset="/img/img_op/vinya_fons_experiencies-480.webp" type="image/webp">
+                <img src="/img/img_op/vinya_fons_experiencies-480.webp" alt="Vinya per a experiències" class="hero-img" width="1600" height="600" fetchpriority="high" decoding="async" loading="eager">
+            </picture>
+
             <h1>Descobreix les nostres experiències</h1>
         </div>
         <div class="contenidor contenidor-exp">
