--- a/PAC1/src/reserva.html
+++ b/PAC1/src/reserva.html
@@ -37,7 +37,13 @@
     </header>
     <main>
         <div id="section-hero" class="reserva-img">
-            <img src="/img/img_op/vinya_fons_reserva-480.webp" alt="Copa de vi de fons" class="hero-img" fetchpriority="high" decoding="async" loading="eager">
+            <picture class="hero-img">
+                <source media="(min-width: 992px)" srcset="/img/img_op/vinya_fons_reserva-1600.webp" type="image/webp">
+                <source media="(min-width: 768px)" srcset="/img/img_op/vinya_fons_reserva-960.webp" type="image/webp">
+                <source srcset="/img/img_op/vinya_fons_reserva-480.webp" type="image/webp">
+                <img src="/img/img_op/vinya_fons_reserva-480.webp" alt="Fons de vinya reserva" class="hero-img" width="1600" height="600" fetchpriority="high" decoding="async" loading="eager">
+            </picture>
+
             <h1>Reserva</h1>
         </div>
         <div class="contenidor-text-form">
